--- a/enbseries/enbeffect.fx.ini
+++ b/enbseries/enbeffect.fx.ini
@@ -15,3 +15,31 @@ CC: Color balance highlights=0.498, 0.498, 0.498
 CC: Channel mixer R=1, 0, 0
 CC: Channel mixer G=0, 1, 0
 CC: Channel mixer B=0, 0, 1
+ED: Brightness=1.0
+ED: Contrast=1.0
+ED: LinearStart=0.22
+ED: LinearLength=0.4
+ED: Black=1.33
+EN: Brightness=1.0
+EN: Contrast=1.0
+EN: LinearStart=0.22
+EN: LinearLength=0.4
+EN: Black=1.33
+ID: Brightness=1.0
+ID: Contrast=1.0
+ID: LinearStart=0.22
+ID: LinearLength=0.4
+ID: Black=1.33
+IN: Brightness=1.0
+IN: Contrast=1.0
+IN: LinearStart=0.22
+IN: LinearLength=0.4
+IN: Black=1.33
+ED: AdaptationMax=1.0
+ED: AdaptationMin=1.0
+EN: AdaptationMax=1.0
+EN: AdaptationMin=1.0
+ID: AdaptationMax=1.0
+ID: AdaptationMin=1.0
+IN: AdaptationMax=1.0
+IN: AdaptationMin=1.0
