--- a/enbseries.ini
+++ b/enbseries.ini
@@ -9,22 +9,22 @@ EnablePrepass=false
 EnablePostPassShader=false
 EnableAdaptation=true
 EnableBloom=true
-EnableLens=true
+EnableLens=false
 EnableDepthOfField=false
-EnableAmbientOcclusion=false
-EnableProceduralSun=false
-EnableDistantShadow=false
+EnableAmbientOcclusion=true
+EnableProceduralSun=true
+EnableDistantShadow=true
 EnableDetailedShadow=true
-EnableCloudShadows=false
-EnableImageBasedLighting=false
-EnableSkinSpecular=false
-EnableSubSurfaceScattering=false
-EnableSkylighting=false
+EnableCloudShadows=true
+EnableImageBasedLighting=true
+EnableSkinSpecular=true
+EnableSubSurfaceScattering=true
+EnableSkylighting=true
 EnableDirectionalSkyLighting=true
-EnableComplexFireLights=false
-EnableComplexParticleLights=false
+EnableComplexFireLights=true
+EnableComplexParticleLights=true
 EnableSunRays=true
-EnableVolumetricRays=false
+EnableVolumetricRays=true
 EnableSunGlare=true
 EnableWater=true
 EnableUnderwaterShader=true
@@ -122,12 +122,12 @@ AuroraBorealisCurveDusk=1.0
 AuroraBorealisCurveNight=1.0
 AuroraBorealisCurveInteriorDay=1.0
 AuroraBorealisCurveInteriorNight=1.0
-GradientIntensityDawn=1.0
-GradientIntensitySunrise=1.0
-GradientIntensityDay=1.0
-GradientIntensitySunset=1.0
-GradientIntensityDusk=1.0
-GradientIntensityNight=1.0
+GradientIntensityDawn=0.5
+GradientIntensitySunrise=0.5
+GradientIntensityDay=0.5
+GradientIntensitySunset=0.5
+GradientIntensityDusk=0.5
+GradientIntensityNight=0.5
 GradientIntensityInteriorDay=1.0
 GradientIntensityInteriorNight=1.0
 GradientDesaturationDawn=0.0
@@ -305,12 +305,12 @@ MoonColorFilterInteriorNight=1, 1, 1
 
 [ENVIRONMENT]
 IgnoreWeatherSystem=true
-DirectLightingIntensityDawn=1.0
-DirectLightingIntensitySunrise=1.0
+DirectLightingIntensityDawn=0.7
+DirectLightingIntensitySunrise=0.8
 DirectLightingIntensityDay=1.0
-DirectLightingIntensitySunset=1.0
-DirectLightingIntensityDusk=1.0
-DirectLightingIntensityNight=1.0
+DirectLightingIntensitySunset=0.8
+DirectLightingIntensityDusk=0.7
+DirectLightingIntensityNight=0.6
 DirectLightingIntensityInteriorDay=1.0
 DirectLightingIntensityInteriorNight=1.0
 DirectLightingCurveDawn=1.0
@@ -346,14 +346,14 @@ DirectLightingColorFilterNight=1, 1, 1
 DirectLightingColorFilterInteriorDay=1, 1, 1
 DirectLightingColorFilterInteriorNight=1, 1, 1
 
-AmbientLightingIntensityDawn=1.0
-AmbientLightingIntensitySunrise=1.0
-AmbientLightingIntensityDay=1.0
-AmbientLightingIntensitySunset=1.0
-AmbientLightingIntensityDusk=1.0
-AmbientLightingIntensityNight=1.0
-AmbientLightingIntensityInteriorDay=1.0
-AmbientLightingIntensityInteriorNight=1.0
+AmbientLightingIntensityDawn=0.5
+AmbientLightingIntensitySunrise=0.6
+AmbientLightingIntensityDay=0.8
+AmbientLightingIntensitySunset=0.7
+AmbientLightingIntensityDusk=0.5
+AmbientLightingIntensityNight=0.5
+AmbientLightingIntensityInteriorDay=0.5
+AmbientLightingIntensityInteriorNight=0.5
 AmbientLightingDesaturationDawn=0.0
 AmbientLightingDesaturationSunrise=0.0
 AmbientLightingDesaturationDay=0.0
@@ -388,31 +388,31 @@ PointLightingDesaturationNight=0.0
 PointLightingDesaturationInteriorDay=0.0
 PointLightingDesaturationInteriorNight=0.0
 
-SpecularAmountMultiplierDawn=1.0
-SpecularAmountMultiplierSunrise=1.0
-SpecularAmountMultiplierDay=1.0
-SpecularAmountMultiplierSunset=1.0
-SpecularAmountMultiplierDusk=1.0
-SpecularAmountMultiplierNight=1.0
-SpecularAmountMultiplierInteriorDay=1.0
-SpecularAmountMultiplierInteriorNight=1.0
-SpecularPowerMultiplierDawn=1.0
-SpecularPowerMultiplierSunrise=1.0
-SpecularPowerMultiplierDay=1.0
-SpecularPowerMultiplierSunset=1.0
-SpecularPowerMultiplierDusk=1.0
-SpecularPowerMultiplierNight=1.0
-SpecularPowerMultiplierInteriorDay=1.0
-SpecularPowerMultiplierInteriorNight=1.0
+SpecularAmountMultiplierDawn=1.5
+SpecularAmountMultiplierSunrise=1.75
+SpecularAmountMultiplierDay=2.0
+SpecularAmountMultiplierSunset=1.75
+SpecularAmountMultiplierDusk=1.5
+SpecularAmountMultiplierNight=1.25
+SpecularAmountMultiplierInteriorDay=2.0
+SpecularAmountMultiplierInteriorNight=2.0
+SpecularPowerMultiplierDawn=0.5
+SpecularPowerMultiplierSunrise=0.5
+SpecularPowerMultiplierDay=0.5
+SpecularPowerMultiplierSunset=0.5
+SpecularPowerMultiplierDusk=0.5
+SpecularPowerMultiplierNight=0.5
+SpecularPowerMultiplierInteriorDay=0.5
+SpecularPowerMultiplierInteriorNight=0.5
 
-FogColorMultiplierDawn=1.0
-FogColorMultiplierSunrise=1.0
-FogColorMultiplierDay=1.0
-FogColorMultiplierSunset=1.0
-FogColorMultiplierDusk=1.0
-FogColorMultiplierNight=1.0
-FogColorMultiplierInteriorDay=1.0
-FogColorMultiplierInteriorNight=1.0
+FogColorMultiplierDawn=0.5
+FogColorMultiplierSunrise=0.5
+FogColorMultiplierDay=0.5
+FogColorMultiplierSunset=0.5
+FogColorMultiplierDusk=0.5
+FogColorMultiplierNight=0.5
+FogColorMultiplierInteriorDay=0.5
+FogColorMultiplierInteriorNight=0.5
 FogColorCurveDawn=1.0
 FogColorCurveSunrise=1.0
 FogColorCurveDay=1.0
@@ -465,41 +465,41 @@ ColorPowInteriorNight=1.0
 
 [SKYLIGHTING]
 IgnoreWeatherSystem=true
-HighPrecision=false
+HighPrecision=true
 Quality=1
-AmbientMinLevelDawn=0.1
-AmbientMinLevelSunrise=0.1
-AmbientMinLevelDay=0.1
-AmbientMinLevelSunset=0.1
-AmbientMinLevelDusk=0.1
-AmbientMinLevelNight=0.1
-AmbientMinLevelInteriorDay=0.1
-AmbientMinLevelInteriorNight=0.1
+AmbientMinLevelDawn=0.5
+AmbientMinLevelSunrise=0.5
+AmbientMinLevelDay=0.5
+AmbientMinLevelSunset=0.5
+AmbientMinLevelDusk=0.5
+AmbientMinLevelNight=0.5
+AmbientMinLevelInteriorDay=0.5
+AmbientMinLevelInteriorNight=0.5
 
 [SSAO_GAME]
-AOAmount=1.0
-AOAmountInterior=1.0
+AOAmount=0.66
+AOAmountInterior=0.66
 ColorfulMix=true
 
 [SSAO_SSIL]
-OptimizeCaching=false
-UseSelfIntersecting=false
+OptimizeCaching=true
+UseSelfIntersecting=true
 UseIndirectLighting=true
-UseComplexAmbientOcclusion=false
+UseComplexAmbientOcclusion=true
 EnableComplexFilter=true
-EnableDenoiser=false
-SamplingQuality=1
-SamplingRange=0.3
-AOIntensity=1.0
-AOIntensityInterior=1.0
-AOAmount=2.0
-AOAmountInterior=1.0
-ILAmount=4.0
-ILAmountInterior=4.0
+EnableDenoiser=true
+SamplingQuality=0
+SamplingRange=0.66
+AOIntensity=1.5
+AOIntensityInterior=1.5
+AOAmount=0.5
+AOAmountInterior=0.5
+ILAmount=2.0
+ILAmountInterior=2.0
 AOMixingType=2
 AOMixingTypeInterior=2
-ResolutionScale=0.5
-SourceTexturesScale=0.5
+ResolutionScale=0.66
+SourceTexturesScale=0.66
 FilterBluriness=0
 IgnoreWeatherSystem=true
 AOIntensityDawn=1.0
@@ -510,17 +510,18 @@ AOIntensityDusk=1.0
 AOIntensityNight=1.0
 AOIntensityInteriorDay=1.0
 AOIntensityInteriorNight=1.0
+SamplingRangeInterior=0.66
 
 [OBJECT]
 IgnoreWeatherSystem=true
-SubSurfaceScatteringMultiplierDawn=1.0
-SubSurfaceScatteringMultiplierSunrise=1.0
-SubSurfaceScatteringMultiplierDay=1.0
-SubSurfaceScatteringMultiplierSunset=1.0
-SubSurfaceScatteringMultiplierDusk=1.0
-SubSurfaceScatteringMultiplierNight=1.0
-SubSurfaceScatteringMultiplierInteriorDay=1.0
-SubSurfaceScatteringMultiplierInteriorNight=1.0
+SubSurfaceScatteringMultiplierDawn=1.2
+SubSurfaceScatteringMultiplierSunrise=0.8
+SubSurfaceScatteringMultiplierDay=0.6
+SubSurfaceScatteringMultiplierSunset=0.8
+SubSurfaceScatteringMultiplierDusk=1.2
+SubSurfaceScatteringMultiplierNight=1.5
+SubSurfaceScatteringMultiplierInteriorDay=0.9
+SubSurfaceScatteringMultiplierInteriorNight=0.9
 SpecularAmountMultiplierDawn=1.0
 SpecularAmountMultiplierSunrise=1.0
 SpecularAmountMultiplierDay=1.0
@@ -956,7 +957,7 @@ BodyReflectionAmountInteriorNight=0.0
 [SUBSURFACESCATTERING]
 IgnoreWeatherSystem=true
 EnableSeparateInteriorParameters=false
-Quality=1
+Quality=0
 Radius=5.0
 RadiusInterior=3.0
 Amount=1.0
