--- a/enbseries/enbadaptation.fx.ini
+++ b/enbseries/enbadaptation.fx.ini
@@ -1,2 +1,9 @@
 [ENBADAPTATION.FX]
-TECHNIQUE=0
+TECHNIQUE=1
+いいいいいいいいいい=0
+=0
+Auto Exposure Bias (log2 scale)=1.0
+Adapt Max Brightness (log2 scale)=-1.0
+Adapt Min Brightness (log2 scale)=-4.0
+Adapt Low  Percent=0.98
+Adapt High Percent=0.95
