--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -1,2 +1,59 @@
 [ENBBLOOM.FX]
 TECHNIQUE=2
+Contrast=1.0
+CC: In black=0.0
+CC: In white=1.0
+CC: Out black=0.0
+CC: Out white=0.5
+CC: SaturationX=1.0
+CC: SaturationY=1.0
+CC: SaturationZ=1.0
+CC: SaturationW=1.0
+Bloom Scale=8.0
+Gaussian: Bloom Shape=2.0
+Gaussian: Bloom Color Tint Amount=0, 0, 0
+««« Reforged Bloom 1.01 »»»=0
+by The Sandvich Maker=0
+=0
+««« Prepass »»»=0
+Discard OOB Samples=true
+Sky Fade=1.0
+Use Threshold=false
+Threshold Style=0
+Threshold Luma Style=1
+Threshold=0.5
+Threshold Softness=0.5
+Pre-Saturation=1.0
+Tonemap Input=false
+««« Gaussian Bloom »»»=0
+Use 512x512 Texture=true
+Use 256x256 Texture=true
+Use 128x128 Texture=true
+Use 64x64 Texture=true
+Use 32x32 Texture=true
+Use 16x16 Texture=true
+Filter Quality=0
+Filter Size=7
+Apply Weights=true
+512x512 Texture Blend Weight=0.85
+256x256 Texture Blend Weight=1.0
+128x128 Texture Blend Weight=1.25
+64x64 Texture Blend Weight=0.9
+32x32 Texture Blend Weight=0.65
+16x16 Texture Blend Weight=0.5
+Normalize Weights=true
+Apply Tint=false
+512x512 Texture Tint=1, 1, 1
+256x256 Texture Tint=1, 1, 1
+128x128 Texture Tint=1, 1, 1
+64x64 Texture Tint=1, 1, 1
+32x32 Texture Tint=0.839, 0, 0.459
+16x16 Texture Tint=1, 1, 1
+Normalize Tint=false
+Counterbalance Tint=1, 0.965, 0.984
+Post Filter=0
+««« Postpass »»»=0
+Inverse Tonemap=false
+««« LensDirt »»»=0
+Amount=0.0
+Dirt Texture Saturation=0.0
