--- a/enbseries/enbdepthoffield.fx.ini
+++ b/enbseries/enbdepthoffield.fx.ini
@@ -5,3 +5,21 @@ Aperture:: size=2.0
 Dof:: sensor size=36.0
 Dof:: bokeh softness=1.0
 Dof:: blur max range=1.0
+DOF: Enable Autofocus=true
+DOF: Autofocus sample centerX=0.5
+DOF: Autofocus sample centerY=0.5
+DOF: Autofocus sample count=6
+DOF: Autofocus sample radius=0.05
+DOF: Manual focus depth=0.05
+DOF: Near blur curve=4.0
+DOF: Far blur curve=2.0
+DOF: Hyperfocal depth distance=0.015
+DOF: Blur render res mult=0.5
+DOF: Bokeh Intensity=0.5
+DOF: Bokeh shape max size=15.0
+DOF: Bokeh shape vertices=6
+DOF: Bokeh shape quality=5
+DOF: Bokeh shape roundness=1.0
+DOF: Bokeh shape rotation (°)=15.0
+DOF: Bokeh shape aspect ratio=1.0
+DOF: Gaussian postblur width=4.0
