--- a/enblocal.ini
+++ b/enblocal.ini
@@ -5,7 +5,7 @@ ProxyLibrary=
 
 [PERFORMANCE]
 SpeedHack=true
-ShaderCache=false
+ShaderCache=true
 
 [ENGINE]
 ForceVSync=false
@@ -20,7 +20,7 @@ KeyCombination=18
 KeyUseEffect=50
 KeyFPSLimit=0
 KeyShowFPS=0
-KeyScreenshot=45
+KeyScreenshot=46
 KeyEditor=49
 KeyDof=0
 
