--- a/enbseries.ini
+++ b/enbseries.ini
@@ -21,13 +21,13 @@ EnableSkinSpecular=true
 EnableSubSurfaceScattering=true
 EnableSkylighting=true
 EnableDirectionalSkyLighting=true
-EnableComplexFireLights=true
+EnableComplexFireLights=false
 EnableComplexParticleLights=true
 EnableSunRays=true
 EnableVolumetricRays=true
 EnableSunGlare=false
 EnableWater=true
-EnableUnderwaterShader=false
+EnableUnderwaterShader=true
 EnableWetSurfaces=true
 EnableRainWetSurfaces=true
 
@@ -52,7 +52,7 @@ NightTime=1.0
 [ADAPTATION]
 AdaptationSensitivity=1.0
 AdaptationTime=0.05
-ForceMinMaxValues=true
+ForceMinMaxValues=false
 AdaptationMin=0.01
 AdaptationMax=1.0
 
@@ -68,19 +68,19 @@ AmountDay=0.25
 AmountSunset=0.3
 AmountDusk=0.35
 AmountNight=0.5
-AmountInteriorDay=0.4
-AmountInteriorNight=0.4
+AmountInteriorDay=0.3
+AmountInteriorNight=0.3
 
 [LENS]
 IgnoreWeatherSystem=true
-AmountDawn=1.0
-AmountSunrise=1.0
-AmountDay=1.0
-AmountSunset=1.0
-AmountDusk=1.0
-AmountNight=1.0
-AmountInteriorDay=1.0
-AmountInteriorNight=1.0
+AmountDawn=0.33
+AmountSunrise=0.33
+AmountDay=0.33
+AmountSunset=0.33
+AmountDusk=0.33
+AmountNight=0.33
+AmountInteriorDay=0.33
+AmountInteriorNight=0.33
 
 [SKY]
 IgnoreWeatherSystem=true
@@ -124,7 +124,7 @@ AuroraBorealisCurveInteriorDay=1.0
 AuroraBorealisCurveInteriorNight=1.0
 GradientIntensityDawn=1.0
 GradientIntensitySunrise=1.0
-GradientIntensityDay=1.5
+GradientIntensityDay=1.0
 GradientIntensitySunset=1.0
 GradientIntensityDusk=1.0
 GradientIntensityNight=1.5
@@ -132,7 +132,7 @@ GradientIntensityInteriorDay=50.0
 GradientIntensityInteriorNight=5.0
 GradientDesaturationDawn=0.0
 GradientDesaturationSunrise=0.0
-GradientDesaturationDay=0.0
+GradientDesaturationDay=0.3
 GradientDesaturationSunset=0.0
 GradientDesaturationDusk=0.0
 GradientDesaturationNight=0.0
@@ -146,11 +146,11 @@ GradientTopIntensityDusk=1.0
 GradientTopIntensityNight=1.0
 GradientTopIntensityInteriorDay=1.0
 GradientTopIntensityInteriorNight=1.0
-GradientTopCurveDawn=1.66
-GradientTopCurveSunrise=1.75
-GradientTopCurveDay=1.5
-GradientTopCurveSunset=1.75
-GradientTopCurveDusk=1.66
+GradientTopCurveDawn=1.0
+GradientTopCurveSunrise=1.0
+GradientTopCurveDay=1.0
+GradientTopCurveSunset=1.0
+GradientTopCurveDusk=1.0
 GradientTopCurveNight=1.0
 GradientTopCurveInteriorDay=1.0
 GradientTopCurveInteriorNight=1.0
@@ -170,11 +170,11 @@ GradientMiddleIntensityDusk=1.0
 GradientMiddleIntensityNight=1.0
 GradientMiddleIntensityInteriorDay=1.0
 GradientMiddleIntensityInteriorNight=1.0
-GradientMiddleCurveDawn=0.66
-GradientMiddleCurveSunrise=0.25
-GradientMiddleCurveDay=1.5
-GradientMiddleCurveSunset=1.5
-GradientMiddleCurveDusk=1.25
+GradientMiddleCurveDawn=1.0
+GradientMiddleCurveSunrise=1.0
+GradientMiddleCurveDay=1.0
+GradientMiddleCurveSunset=1.0
+GradientMiddleCurveDusk=1.0
 GradientMiddleCurveNight=1.0
 GradientMiddleCurveInteriorDay=1.0
 GradientMiddleCurveInteriorNight=1.0
@@ -186,18 +186,18 @@ GradientMiddleColorFilterDusk=1, 1, 1
 GradientMiddleColorFilterNight=1, 1, 1
 GradientMiddleColorFilterInteriorDay=1, 1, 1
 GradientMiddleColorFilterInteriorNight=1, 1, 1
-GradientHorizonIntensityDawn=2.0
-GradientHorizonIntensitySunrise=3.0
+GradientHorizonIntensityDawn=1.0
+GradientHorizonIntensitySunrise=1.0
 GradientHorizonIntensityDay=1.0
-GradientHorizonIntensitySunset=3.0
-GradientHorizonIntensityDusk=2.0
-GradientHorizonIntensityNight=2.0
+GradientHorizonIntensitySunset=1.0
+GradientHorizonIntensityDusk=1.001
+GradientHorizonIntensityNight=1.0
 GradientHorizonIntensityInteriorDay=1.0
 GradientHorizonIntensityInteriorNight=1.0
 GradientHorizonCurveDawn=1.0
-GradientHorizonCurveSunrise=4.0
-GradientHorizonCurveDay=1.5
-GradientHorizonCurveSunset=4.0
+GradientHorizonCurveSunrise=1.0
+GradientHorizonCurveDay=1.0
+GradientHorizonCurveSunset=1.0
 GradientHorizonCurveDusk=1.0
 GradientHorizonCurveNight=1.0
 GradientHorizonCurveInteriorDay=1.0
@@ -210,25 +210,25 @@ GradientHorizonColorFilterDusk=1, 1, 1
 GradientHorizonColorFilterNight=1, 1, 1
 GradientHorizonColorFilterInteriorDay=1, 1, 1
 GradientHorizonColorFilterInteriorNight=1, 1, 1
-CloudsIntensityDawn=1.5
-CloudsIntensitySunrise=1.5
-CloudsIntensityDay=1.5
-CloudsIntensitySunset=1.5
-CloudsIntensityDusk=1.5
+CloudsIntensityDawn=1.0
+CloudsIntensitySunrise=1.0
+CloudsIntensityDay=1.0
+CloudsIntensitySunset=1.0
+CloudsIntensityDusk=1.0
 CloudsIntensityNight=1.0
 CloudsIntensityInteriorDay=1.0
 CloudsIntensityInteriorNight=1.0
-CloudsCurveDawn=2.0
-CloudsCurveSunrise=2.0
-CloudsCurveDay=2.0
-CloudsCurveSunset=2.0
-CloudsCurveDusk=2.0
+CloudsCurveDawn=1.0
+CloudsCurveSunrise=1.0
+CloudsCurveDay=1.0
+CloudsCurveSunset=1.0
+CloudsCurveDusk=1.0
 CloudsCurveNight=1.0
 CloudsCurveInteriorDay=2.0
 CloudsCurveInteriorNight=2.0
 CloudsDesaturationDawn=0.0
 CloudsDesaturationSunrise=0.0
-CloudsDesaturationDay=0.0
+CloudsDesaturationDay=0.75
 CloudsDesaturationSunset=0.0
 CloudsDesaturationDusk=0.0
 CloudsDesaturationNight=0.5
@@ -251,9 +251,9 @@ CloudsColorFilterNight=1, 1, 1
 CloudsColorFilterInteriorDay=1, 1, 1
 CloudsColorFilterInteriorNight=1, 1, 1
 CloudsEdgeClamp=0.5
-CloudsEdgeIntensity=2.0
-CloudsEdgeFadeRange=1.0
-CloudsEdgeMoonMultiplier=2.0
+CloudsEdgeIntensity=4.0
+CloudsEdgeFadeRange=0.5
+CloudsEdgeMoonMultiplier=1.0
 SunIntensityDawn=1.0
 SunIntensitySunrise=1.0
 SunIntensityDay=1.0
@@ -279,9 +279,9 @@ SunColorFilterNight=1, 1, 1
 SunColorFilterInteriorDay=1, 1, 1
 SunColorFilterInteriorNight=1, 1, 1
 MoonIntensityDawn=1.0
-MoonIntensitySunrise=1.0
-MoonIntensityDay=5.0
-MoonIntensitySunset=1.0
+MoonIntensitySunrise=5.0
+MoonIntensityDay=7.5
+MoonIntensitySunset=5.0
 MoonIntensityDusk=1.0
 MoonIntensityNight=1.0
 MoonIntensityInteriorDay=1.0
@@ -305,12 +305,12 @@ MoonColorFilterInteriorNight=1, 1, 1
 
 [ENVIRONMENT]
 IgnoreWeatherSystem=true
-DirectLightingIntensityDawn=0.8
-DirectLightingIntensitySunrise=0.9
-DirectLightingIntensityDay=2.5
-DirectLightingIntensitySunset=0.9
-DirectLightingIntensityDusk=0.8
-DirectLightingIntensityNight=1.0
+DirectLightingIntensityDawn=1.25
+DirectLightingIntensitySunrise=1.5
+DirectLightingIntensityDay=1.8
+DirectLightingIntensitySunset=1.5
+DirectLightingIntensityDusk=1.25
+DirectLightingIntensityNight=1.25
 DirectLightingIntensityInteriorDay=1.0
 DirectLightingIntensityInteriorNight=1.0
 DirectLightingCurveDawn=1.5
@@ -348,10 +348,10 @@ DirectLightingColorFilterInteriorNight=1, 1, 1
 
 AmbientLightingIntensityDawn=0.25
 AmbientLightingIntensitySunrise=0.33
-AmbientLightingIntensityDay=0.7
+AmbientLightingIntensityDay=1.0
 AmbientLightingIntensitySunset=0.33
 AmbientLightingIntensityDusk=0.25
-AmbientLightingIntensityNight=0.8
+AmbientLightingIntensityNight=0.66
 AmbientLightingIntensityInteriorDay=1.25
 AmbientLightingIntensityInteriorNight=0.5
 AmbientLightingDesaturationDawn=0.0
@@ -390,7 +390,7 @@ PointLightingDesaturationInteriorNight=0.25
 
 SpecularAmountMultiplierDawn=1.5
 SpecularAmountMultiplierSunrise=1.75
-SpecularAmountMultiplierDay=2.0
+SpecularAmountMultiplierDay=3.0
 SpecularAmountMultiplierSunset=1.75
 SpecularAmountMultiplierDusk=1.5
 SpecularAmountMultiplierNight=1.25
@@ -398,7 +398,7 @@ SpecularAmountMultiplierInteriorDay=3.0
 SpecularAmountMultiplierInteriorNight=3.0
 SpecularPowerMultiplierDawn=0.5
 SpecularPowerMultiplierSunrise=0.5
-SpecularPowerMultiplierDay=0.5
+SpecularPowerMultiplierDay=2.0
 SpecularPowerMultiplierSunset=0.5
 SpecularPowerMultiplierDusk=0.5
 SpecularPowerMultiplierNight=0.5
@@ -407,7 +407,7 @@ SpecularPowerMultiplierInteriorNight=0.5
 
 FogColorMultiplierDawn=0.8
 FogColorMultiplierSunrise=0.8
-FogColorMultiplierDay=0.8
+FogColorMultiplierDay=1.0
 FogColorMultiplierSunset=0.8
 FogColorMultiplierDusk=0.8
 FogColorMultiplierNight=0.8
@@ -423,7 +423,7 @@ FogColorCurveInteriorDay=1.0
 FogColorCurveInteriorNight=1.0
 FogAmountMultiplierDawn=1.0
 FogAmountMultiplierSunrise=0.75
-FogAmountMultiplierDay=0.5
+FogAmountMultiplierDay=1.0
 FogAmountMultiplierSunset=0.75
 FogAmountMultiplierDusk=1.0
 FogAmountMultiplierNight=1.0
@@ -467,12 +467,12 @@ ColorPowInteriorNight=1.0
 IgnoreWeatherSystem=true
 HighPrecision=true
 Quality=1
-AmbientMinLevelDawn=0.25
-AmbientMinLevelSunrise=0.24
-AmbientMinLevelDay=0.25
-AmbientMinLevelSunset=0.25
-AmbientMinLevelDusk=0.25
-AmbientMinLevelNight=0.4
+AmbientMinLevelDawn=0.5
+AmbientMinLevelSunrise=0.5
+AmbientMinLevelDay=0.5
+AmbientMinLevelSunset=0.5
+AmbientMinLevelDusk=0.5
+AmbientMinLevelNight=0.5
 AmbientMinLevelInteriorDay=0.5
 AmbientMinLevelInteriorNight=0.5
 
@@ -541,30 +541,30 @@ SpecularPowerMultiplierInteriorNight=1.0
 
 [VEGETATION]
 IgnoreWeatherSystem=true
-SubSurfaceScatteringMultiplierDawn=0.8
-SubSurfaceScatteringMultiplierSunrise=0.5
-SubSurfaceScatteringMultiplierDay=0.3
-SubSurfaceScatteringMultiplierSunset=0.5
-SubSurfaceScatteringMultiplierDusk=0.8
+SubSurfaceScatteringMultiplierDawn=1.0
+SubSurfaceScatteringMultiplierSunrise=1.0
+SubSurfaceScatteringMultiplierDay=1.0
+SubSurfaceScatteringMultiplierSunset=1.0
+SubSurfaceScatteringMultiplierDusk=1.0
 SubSurfaceScatteringMultiplierNight=1.0
 SubSurfaceScatteringMultiplierInteriorDay=1.0
 SubSurfaceScatteringMultiplierInteriorNight=1.0
-SpecularAmountMultiplierDawn=3.0
-SpecularAmountMultiplierSunrise=3.0
-SpecularAmountMultiplierDay=3.0
-SpecularAmountMultiplierSunset=3.0
-SpecularAmountMultiplierDusk=3.0
-SpecularAmountMultiplierNight=3.0
-SpecularAmountMultiplierInteriorDay=3.0
-SpecularAmountMultiplierInteriorNight=3.0
-SpecularPowerMultiplierDawn=0.6
-SpecularPowerMultiplierSunrise=0.6
-SpecularPowerMultiplierDay=0.6
-SpecularPowerMultiplierSunset=0.6
-SpecularPowerMultiplierDusk=0.6
-SpecularPowerMultiplierNight=0.6
-SpecularPowerMultiplierInteriorDay=0.6
-SpecularPowerMultiplierInteriorNight=0.6
+SpecularAmountMultiplierDawn=0.5
+SpecularAmountMultiplierSunrise=0.5
+SpecularAmountMultiplierDay=0.5
+SpecularAmountMultiplierSunset=0.5
+SpecularAmountMultiplierDusk=0.5
+SpecularAmountMultiplierNight=0.5
+SpecularAmountMultiplierInteriorDay=0.5
+SpecularAmountMultiplierInteriorNight=0.5
+SpecularPowerMultiplierDawn=0.35
+SpecularPowerMultiplierSunrise=0.35
+SpecularPowerMultiplierDay=0.35
+SpecularPowerMultiplierSunset=0.35
+SpecularPowerMultiplierDusk=0.35
+SpecularPowerMultiplierNight=0.35
+SpecularPowerMultiplierInteriorDay=0.35
+SpecularPowerMultiplierInteriorNight=0.35
 
 [EYE]
 IgnoreWeatherSystem=true
@@ -596,16 +596,16 @@ SpecularPowerMultiplierInteriorNight=0.5
 [GRASS]
 IgnoreWeatherSystem=true
 DirectionalMultiplierDawn=2.0
-DirectionalMultiplierSunrise=3.0
-DirectionalMultiplierDay=3.5
-DirectionalMultiplierSunset=3.0
+DirectionalMultiplierSunrise=2.0
+DirectionalMultiplierDay=2.0
+DirectionalMultiplierSunset=2.0
 DirectionalMultiplierDusk=2.0
 DirectionalMultiplierNight=1.0
 DirectionalMultiplierInteriorDay=3.0
 DirectionalMultiplierInteriorNight=3.0
 AmbientMultiplierDawn=2.0
 AmbientMultiplierSunrise=2.25
-AmbientMultiplierDay=1.0
+AmbientMultiplierDay=3.0
 AmbientMultiplierSunset=2.25
 AmbientMultiplierDusk=2.0
 AmbientMultiplierNight=1.75
@@ -633,12 +633,12 @@ SpecularAmountInteriorNight=1.0
 
 [WINDOWLIGHT]
 IgnoreWeatherSystem=true
-IntensityDawn=40.0
-IntensitySunrise=30.0
+IntensityDawn=30.0
+IntensitySunrise=25.0
 IntensityDay=5.0
-IntensitySunset=30.0
-IntensityDusk=40.0
-IntensityNight=50.0
+IntensitySunset=15.0
+IntensityDusk=25.0
+IntensityNight=30.0
 IntensityInteriorDay=10.0
 IntensityInteriorNight=10.0
 CurveDawn=1.0
@@ -672,7 +672,7 @@ CurveInteriorNight=1.0
 [VOLUMETRICFOG]
 IgnoreWeatherSystem=true
 IntensityDawn=1.0
-IntensitySunrise=1.0
+IntensitySunrise=1000.0
 IntensityDay=1.0
 IntensitySunset=1.0
 IntensityDusk=1.0
@@ -681,7 +681,7 @@ IntensityInteriorDay=1.0
 IntensityInteriorNight=1.0
 CurveDawn=1.0
 CurveSunrise=1.0
-CurveDay=1.0
+CurveDay=1.5
 CurveSunset=1.0
 CurveDusk=1.0
 CurveNight=1.0
@@ -753,7 +753,7 @@ HitIntensityDay=1.0
 HitIntensitySunset=1.0
 HitIntensityDusk=1.0
 HitIntensityNight=1.0
-HitIntensityInteriorDay=1.0
+HitIntensityInteriorDay=0.0
 HitIntensityInteriorNight=1.0
 IntensityDawn=1.0
 IntensitySunrise=1.0
@@ -799,8 +799,8 @@ IntensityDay=0.5
 IntensitySunset=0.5
 IntensityDusk=0.5
 IntensityNight=0.5
-IntensityInteriorDay=0.5
-IntensityInteriorNight=0.5
+IntensityInteriorDay=0.33
+IntensityInteriorNight=0.33
 CurveDawn=1.0
 CurveSunrise=1.0
 CurveDay=1.0
@@ -830,7 +830,7 @@ DistanceFadeInteriorNight=1.0
 IgnoreWeatherSystem=true
 AdditiveAmountDawn=0.07
 AdditiveAmountSunrise=0.05
-AdditiveAmountDay=0.05
+AdditiveAmountDay=0.04
 AdditiveAmountSunset=0.06
 AdditiveAmountDusk=0.07
 AdditiveAmountNight=0.18
@@ -844,27 +844,27 @@ MultiplicativeAmountDusk=0.2
 MultiplicativeAmountNight=0.3
 MultiplicativeAmountInteriorDay=0.5
 MultiplicativeAmountInteriorNight=0.5
-ReflectiveAmountDawn=0.2
-ReflectiveAmountSunrise=0.2
-ReflectiveAmountDay=0.2
-ReflectiveAmountSunset=0.2
-ReflectiveAmountDusk=0.34
-ReflectiveAmountNight=0.5
-ReflectiveAmountInteriorDay=0.5
-ReflectiveAmountInteriorNight=0.5
+ReflectiveAmountDawn=0.15
+ReflectiveAmountSunrise=0.1
+ReflectiveAmountDay=0.1
+ReflectiveAmountSunset=0.1
+ReflectiveAmountDusk=0.15
+ReflectiveAmountNight=0.2
+ReflectiveAmountInteriorDay=0.25
+ReflectiveAmountInteriorNight=0.25
 
 [RAIN]
 IgnoreWeatherSystem=true
-Enable=true
-EnableSupersampling=true
+Enable=false
+EnableSupersampling=false
 UseOriginalTexture=false
-MotionStretch=1.0
-MotionTransparency=0.5
-MotionBluriness=0.3
-RefractionFactor=1.0
+MotionStretch=0.3
+MotionTransparency=0.0
+MotionBluriness=0.15
+RefractionFactor=2.0
 BrightnessDawn=1.0
 BrightnessSunrise=1.0
-BrightnessDay=1.0
+BrightnessDay=1.5
 BrightnessSunset=1.0
 BrightnessDusk=1.0
 BrightnessNight=1.0
@@ -873,9 +873,9 @@ BrightnessInteriorNight=1.0
 
 [RAINWETSURFACES]
 IgnoreWeatherSystem=true
-RainFadeTime=30.0
+RainFadeTime=15.0
 ColorPowMultiplier=1.2
-FresnelMin=0.1
+FresnelMin=0.2
 FresnelCurve=4.0
 GlossinessDawn=1.0
 GlossinessSunrise=1.0
@@ -885,14 +885,14 @@ GlossinessDusk=1.0
 GlossinessNight=1.0
 GlossinessInteriorDay=1.0
 GlossinessInteriorNight=1.0
-ReflectionAmountDawn=0.3
-ReflectionAmountSunrise=0.3
-ReflectionAmountDay=0.3
-ReflectionAmountSunset=0.3
-ReflectionAmountDusk=0.3
-ReflectionAmountNight=0.3
-ReflectionAmountInteriorDay=0.3
-ReflectionAmountInteriorNight=0.3
+ReflectionAmountDawn=1.0
+ReflectionAmountSunrise=1.0
+ReflectionAmountDay=1.0
+ReflectionAmountSunset=1.0
+ReflectionAmountDusk=1.0
+ReflectionAmountNight=1.0
+ReflectionAmountInteriorDay=1.0
+ReflectionAmountInteriorNight=1.0
 BodyFresnelMin=0.05
 BodyFresnelCurve=4.0
 BodyGlossinessDawn=1.0
@@ -903,14 +903,14 @@ BodyGlossinessDusk=1.0
 BodyGlossinessNight=1.0
 BodyGlossinessInteriorDay=1.0
 BodyGlossinessInteriorNight=1.0
-BodyReflectionAmountDawn=0.3
-BodyReflectionAmountSunrise=0.3
-BodyReflectionAmountDay=0.3
-BodyReflectionAmountSunset=0.3
-BodyReflectionAmountDusk=0.3
-BodyReflectionAmountNight=0.3
-BodyReflectionAmountInteriorDay=0.3
-BodyReflectionAmountInteriorNight=0.3
+BodyReflectionAmountDawn=1.0
+BodyReflectionAmountSunrise=1.0
+BodyReflectionAmountDay=1.0
+BodyReflectionAmountSunset=1.0
+BodyReflectionAmountDusk=1.0
+BodyReflectionAmountNight=1.0
+BodyReflectionAmountInteriorDay=1.0
+BodyReflectionAmountInteriorNight=1.0
 
 [WETSURFACES]
 IgnoreWeatherSystem=true
@@ -1032,12 +1032,12 @@ TintAmount=4.0
 
 [GAMEVOLUMETRICRAYS]
 IgnoreWeatherSystem=true
-IntensityDawn=0.0
-IntensitySunrise=0.0
-IntensityDay=0.0
-IntensitySunset=0.0
-IntensityDusk=0.0
-IntensityNight=0.0
+IntensityDawn=1.0
+IntensitySunrise=1.0
+IntensityDay=1.0
+IntensitySunset=1.0
+IntensityDusk=1.0
+IntensityNight=1.0
 IntensityInteriorDay=1.0
 IntensityInteriorNight=1.0
 RangeFactorDawn=1.0
@@ -1061,12 +1061,12 @@ ColorFilterInteriorNight=1, 1, 1
 IgnoreWeatherSystem=true
 Quality=1
 Type=1
-SunRaysMultiplierDawn=1.0
-SunRaysMultiplierSunrise=1.0
-SunRaysMultiplierDay=1.0
-SunRaysMultiplierSunset=1.0
-SunRaysMultiplierDusk=1.0
-SunRaysMultiplierNight=1.0
+SunRaysMultiplierDawn=0.4
+SunRaysMultiplierSunrise=0.3
+SunRaysMultiplierDay=0.2
+SunRaysMultiplierSunset=0.3
+SunRaysMultiplierDusk=0.4
+SunRaysMultiplierNight=0.5
 SunRaysMultiplierInteriorDay=1.0
 SunRaysMultiplierInteriorNight=1.0
 
@@ -1075,7 +1075,7 @@ IgnoreWeatherSystem=true
 Quality=1
 IntensityDawn=0.75
 IntensitySunrise=0.5
-IntensityDay=0.0
+IntensityDay=0.33
 IntensitySunset=0.5
 IntensityDusk=0.75
 IntensityNight=0.0
@@ -1111,14 +1111,14 @@ IntensityInteriorNight=0.5
 
 [SUNGLARE]
 IgnoreWeatherSystem=true
-GlowIntensityDawn=1.0
-GlowIntensitySunrise=1.0
-GlowIntensityDay=1.0
-GlowIntensitySunset=1.0
-GlowIntensityDusk=1.0
-GlowIntensityNight=1.0
-GlowIntensityInteriorDay=1.0
-GlowIntensityInteriorNight=1.0
+GlowIntensityDawn=0.33
+GlowIntensitySunrise=0.5
+GlowIntensityDay=0.75
+GlowIntensitySunset=0.5
+GlowIntensityDusk=0.33
+GlowIntensityNight=0.0
+GlowIntensityInteriorDay=0.0
+GlowIntensityInteriorNight=0.0
 
 [PROCEDURALSUN]
 IgnoreWeatherSystem=true
