--- a/enbseries.ini
+++ b/enbseries.ini
@@ -9,7 +9,7 @@ EnablePrepass=true
 EnablePostPassShader=true
 EnableAdaptation=true
 EnableBloom=true
-EnableLens=false
+EnableLens=true
 EnableDepthOfField=false
 EnableAmbientOcclusion=true
 EnableProceduralSun=true
@@ -124,7 +124,7 @@ AuroraBorealisCurveInteriorDay=1.0
 AuroraBorealisCurveInteriorNight=1.0
 GradientIntensityDawn=1.0
 GradientIntensitySunrise=1.0
-GradientIntensityDay=1.0
+GradientIntensityDay=1.25
 GradientIntensitySunset=1.0
 GradientIntensityDusk=1.0
 GradientIntensityNight=1.5
@@ -132,7 +132,7 @@ GradientIntensityInteriorDay=50.0
 GradientIntensityInteriorNight=5.0
 GradientDesaturationDawn=0.0
 GradientDesaturationSunrise=0.0
-GradientDesaturationDay=0.3
+GradientDesaturationDay=0.0
 GradientDesaturationSunset=0.0
 GradientDesaturationDusk=0.0
 GradientDesaturationNight=0.0
@@ -148,7 +148,7 @@ GradientTopIntensityInteriorDay=1.0
 GradientTopIntensityInteriorNight=1.0
 GradientTopCurveDawn=1.0
 GradientTopCurveSunrise=1.0
-GradientTopCurveDay=1.0
+GradientTopCurveDay=1.25
 GradientTopCurveSunset=1.0
 GradientTopCurveDusk=1.0
 GradientTopCurveNight=1.0
@@ -172,7 +172,7 @@ GradientMiddleIntensityInteriorDay=1.0
 GradientMiddleIntensityInteriorNight=1.0
 GradientMiddleCurveDawn=1.0
 GradientMiddleCurveSunrise=1.0
-GradientMiddleCurveDay=1.0
+GradientMiddleCurveDay=1.5
 GradientMiddleCurveSunset=1.0
 GradientMiddleCurveDusk=1.0
 GradientMiddleCurveNight=1.0
@@ -186,19 +186,19 @@ GradientMiddleColorFilterDusk=1, 1, 1
 GradientMiddleColorFilterNight=1, 1, 1
 GradientMiddleColorFilterInteriorDay=1, 1, 1
 GradientMiddleColorFilterInteriorNight=1, 1, 1
-GradientHorizonIntensityDawn=1.0
-GradientHorizonIntensitySunrise=1.0
+GradientHorizonIntensityDawn=2.0
+GradientHorizonIntensitySunrise=1.5
 GradientHorizonIntensityDay=1.0
-GradientHorizonIntensitySunset=1.0
-GradientHorizonIntensityDusk=1.001
-GradientHorizonIntensityNight=1.0
+GradientHorizonIntensitySunset=1.5
+GradientHorizonIntensityDusk=2.0
+GradientHorizonIntensityNight=1.5
 GradientHorizonIntensityInteriorDay=1.0
 GradientHorizonIntensityInteriorNight=1.0
-GradientHorizonCurveDawn=1.0
-GradientHorizonCurveSunrise=1.0
-GradientHorizonCurveDay=1.0
-GradientHorizonCurveSunset=1.0
-GradientHorizonCurveDusk=1.0
+GradientHorizonCurveDawn=1.5
+GradientHorizonCurveSunrise=1.25
+GradientHorizonCurveDay=1.25
+GradientHorizonCurveSunset=1.25
+GradientHorizonCurveDusk=1.5
 GradientHorizonCurveNight=1.0
 GradientHorizonCurveInteriorDay=1.0
 GradientHorizonCurveInteriorNight=1.0
@@ -279,16 +279,16 @@ SunColorFilterNight=1, 1, 1
 SunColorFilterInteriorDay=1, 1, 1
 SunColorFilterInteriorNight=1, 1, 1
 MoonIntensityDawn=1.0
-MoonIntensitySunrise=5.0
-MoonIntensityDay=7.5
-MoonIntensitySunset=5.0
+MoonIntensitySunrise=3.0
+MoonIntensityDay=5.0
+MoonIntensitySunset=3.0
 MoonIntensityDusk=1.0
 MoonIntensityNight=1.0
 MoonIntensityInteriorDay=1.0
 MoonIntensityInteriorNight=1.0
 MoonDesaturationDawn=0.0
 MoonDesaturationSunrise=0.0
-MoonDesaturationDay=1.0
+MoonDesaturationDay=0.75
 MoonDesaturationSunset=0.0
 MoonDesaturationDusk=0.0
 MoonDesaturationNight=0.0
@@ -305,62 +305,62 @@ MoonColorFilterInteriorNight=1, 1, 1
 
 [ENVIRONMENT]
 IgnoreWeatherSystem=true
-DirectLightingIntensityDawn=1.25
+DirectLightingIntensityDawn=1.35
 DirectLightingIntensitySunrise=1.5
-DirectLightingIntensityDay=1.8
+DirectLightingIntensityDay=1.85
 DirectLightingIntensitySunset=1.5
-DirectLightingIntensityDusk=1.25
-DirectLightingIntensityNight=1.25
+DirectLightingIntensityDusk=1.35
+DirectLightingIntensityNight=2.0
 DirectLightingIntensityInteriorDay=1.0
 DirectLightingIntensityInteriorNight=1.0
-DirectLightingCurveDawn=1.5
-DirectLightingCurveSunrise=1.5
+DirectLightingCurveDawn=1.0
+DirectLightingCurveSunrise=1.0
 DirectLightingCurveDay=1.0
-DirectLightingCurveSunset=1.5
-DirectLightingCurveDusk=1.5
-DirectLightingCurveNight=1.0
+DirectLightingCurveSunset=1.0
+DirectLightingCurveDusk=0.99
+DirectLightingCurveNight=1.25
 DirectLightingCurveInteriorDay=1.0
 DirectLightingCurveInteriorNight=1.0
-DirectLightingDesaturationDawn=0.0
+DirectLightingDesaturationDawn=0.2
 DirectLightingDesaturationSunrise=0.0
-DirectLightingDesaturationDay=0.75
+DirectLightingDesaturationDay=0.66
 DirectLightingDesaturationSunset=0.0
-DirectLightingDesaturationDusk=0.0
+DirectLightingDesaturationDusk=0.2
 DirectLightingDesaturationNight=0.0
 DirectLightingDesaturationInteriorDay=0.0
 DirectLightingDesaturationInteriorNight=0.0
-DirectLightingColorFilterAmountDawn=0.75
-DirectLightingColorFilterAmountSunrise=1.0
+DirectLightingColorFilterAmountDawn=0.0
+DirectLightingColorFilterAmountSunrise=0.0
 DirectLightingColorFilterAmountDay=0.0
-DirectLightingColorFilterAmountSunset=1.0
-DirectLightingColorFilterAmountDusk=0.75
-DirectLightingColorFilterAmountNight=0.5
+DirectLightingColorFilterAmountSunset=0.0
+DirectLightingColorFilterAmountDusk=0.0
+DirectLightingColorFilterAmountNight=0.0
 DirectLightingColorFilterAmountInteriorDay=0.0
 DirectLightingColorFilterAmountInteriorNight=0.0
-DirectLightingColorFilterDawn=0.392, 0.098, 0
-DirectLightingColorFilterSunrise=0.392, 0.196, 0
-DirectLightingColorFilterDay=0.827, 0.804, 0.741
-DirectLightingColorFilterSunset=0.392, 0.196, 0
-DirectLightingColorFilterDusk=0.392, 0.098, 0
-DirectLightingColorFilterNight=0.0667, 0.231, 0.561
+DirectLightingColorFilterDawn=1, 1, 1
+DirectLightingColorFilterSunrise=1, 1, 1
+DirectLightingColorFilterDay=1, 1, 1
+DirectLightingColorFilterSunset=1, 1, 1
+DirectLightingColorFilterDusk=1, 1, 1
+DirectLightingColorFilterNight=1, 1, 1
 DirectLightingColorFilterInteriorDay=1, 1, 1
 DirectLightingColorFilterInteriorNight=1, 1, 1
 
-AmbientLightingIntensityDawn=0.25
-AmbientLightingIntensitySunrise=0.33
+AmbientLightingIntensityDawn=0.66
+AmbientLightingIntensitySunrise=0.5
 AmbientLightingIntensityDay=1.0
-AmbientLightingIntensitySunset=0.33
-AmbientLightingIntensityDusk=0.25
-AmbientLightingIntensityNight=0.66
+AmbientLightingIntensitySunset=0.5
+AmbientLightingIntensityDusk=0.66
+AmbientLightingIntensityNight=0.75
 AmbientLightingIntensityInteriorDay=1.25
 AmbientLightingIntensityInteriorNight=0.5
 AmbientLightingDesaturationDawn=0.0
-AmbientLightingDesaturationSunrise=0.0
-AmbientLightingDesaturationDay=0.0
-AmbientLightingDesaturationSunset=0.0
+AmbientLightingDesaturationSunrise=0.3
+AmbientLightingDesaturationDay=0.66
+AmbientLightingDesaturationSunset=0.3
 AmbientLightingDesaturationDusk=0.0
 AmbientLightingDesaturationNight=0.0
-AmbientLightingDesaturationInteriorDay=0.75
+AmbientLightingDesaturationInteriorDay=0.5
 AmbientLightingDesaturationInteriorNight=0.25
 
 PointLightingIntensityDawn=1.0
@@ -405,26 +405,26 @@ SpecularPowerMultiplierNight=0.5
 SpecularPowerMultiplierInteriorDay=0.5
 SpecularPowerMultiplierInteriorNight=0.5
 
-FogColorMultiplierDawn=0.8
-FogColorMultiplierSunrise=0.8
-FogColorMultiplierDay=1.0
-FogColorMultiplierSunset=0.8
-FogColorMultiplierDusk=0.8
-FogColorMultiplierNight=0.8
+FogColorMultiplierDawn=0.9
+FogColorMultiplierSunrise=0.98
+FogColorMultiplierDay=1.25
+FogColorMultiplierSunset=0.98
+FogColorMultiplierDusk=0.9
+FogColorMultiplierNight=1.0
 FogColorMultiplierInteriorDay=1.0
 FogColorMultiplierInteriorNight=1.0
 FogColorCurveDawn=1.0
-FogColorCurveSunrise=1.0
-FogColorCurveDay=1.0
-FogColorCurveSunset=1.0
+FogColorCurveSunrise=1.25
+FogColorCurveDay=1.5
+FogColorCurveSunset=1.25
 FogColorCurveDusk=1.0
 FogColorCurveNight=1.0
 FogColorCurveInteriorDay=1.0
 FogColorCurveInteriorNight=1.0
 FogAmountMultiplierDawn=1.0
-FogAmountMultiplierSunrise=0.75
-FogAmountMultiplierDay=1.0
-FogAmountMultiplierSunset=0.75
+FogAmountMultiplierSunrise=0.66
+FogAmountMultiplierDay=0.5
+FogAmountMultiplierSunset=0.66
 FogAmountMultiplierDusk=1.0
 FogAmountMultiplierNight=1.0
 FogAmountMultiplierInteriorDay=0.0
@@ -467,12 +467,12 @@ ColorPowInteriorNight=1.0
 IgnoreWeatherSystem=true
 HighPrecision=true
 Quality=1
-AmbientMinLevelDawn=0.5
-AmbientMinLevelSunrise=0.5
-AmbientMinLevelDay=0.5
-AmbientMinLevelSunset=0.5
-AmbientMinLevelDusk=0.5
-AmbientMinLevelNight=0.5
+AmbientMinLevelDawn=0.1
+AmbientMinLevelSunrise=0.2
+AmbientMinLevelDay=0.35
+AmbientMinLevelSunset=0.2
+AmbientMinLevelDusk=0.1
+AmbientMinLevelNight=0.35
 AmbientMinLevelInteriorDay=0.5
 AmbientMinLevelInteriorNight=0.5
 
@@ -672,7 +672,7 @@ CurveInteriorNight=1.0
 [VOLUMETRICFOG]
 IgnoreWeatherSystem=true
 IntensityDawn=1.0
-IntensitySunrise=1000.0
+IntensitySunrise=1.0
 IntensityDay=1.0
 IntensitySunset=1.0
 IntensityDusk=1.0
@@ -799,8 +799,8 @@ IntensityDay=0.5
 IntensitySunset=0.5
 IntensityDusk=0.5
 IntensityNight=0.5
-IntensityInteriorDay=0.33
-IntensityInteriorNight=0.33
+IntensityInteriorDay=0.75
+IntensityInteriorNight=0.75
 CurveDawn=1.0
 CurveSunrise=1.0
 CurveDay=1.0
@@ -830,38 +830,38 @@ DistanceFadeInteriorNight=1.0
 IgnoreWeatherSystem=true
 AdditiveAmountDawn=0.07
 AdditiveAmountSunrise=0.05
-AdditiveAmountDay=0.04
+AdditiveAmountDay=0.02
 AdditiveAmountSunset=0.06
 AdditiveAmountDusk=0.07
-AdditiveAmountNight=0.18
+AdditiveAmountNight=0.08
 AdditiveAmountInteriorDay=0.5
 AdditiveAmountInteriorNight=0.5
 MultiplicativeAmountDawn=0.3
 MultiplicativeAmountSunrise=0.15
-MultiplicativeAmountDay=0.12
+MultiplicativeAmountDay=0.06
 MultiplicativeAmountSunset=0.15
 MultiplicativeAmountDusk=0.2
-MultiplicativeAmountNight=0.3
+MultiplicativeAmountNight=0.15
 MultiplicativeAmountInteriorDay=0.5
 MultiplicativeAmountInteriorNight=0.5
-ReflectiveAmountDawn=0.15
+ReflectiveAmountDawn=0.12
 ReflectiveAmountSunrise=0.1
-ReflectiveAmountDay=0.1
+ReflectiveAmountDay=0.05
 ReflectiveAmountSunset=0.1
-ReflectiveAmountDusk=0.15
-ReflectiveAmountNight=0.2
+ReflectiveAmountDusk=0.12
+ReflectiveAmountNight=0.15
 ReflectiveAmountInteriorDay=0.25
 ReflectiveAmountInteriorNight=0.25
 
 [RAIN]
 IgnoreWeatherSystem=true
-Enable=false
-EnableSupersampling=false
+Enable=true
+EnableSupersampling=true
 UseOriginalTexture=false
-MotionStretch=0.3
+MotionStretch=0.33
 MotionTransparency=0.0
-MotionBluriness=0.15
-RefractionFactor=2.0
+MotionBluriness=0.25
+RefractionFactor=1.5
 BrightnessDawn=1.0
 BrightnessSunrise=1.0
 BrightnessDay=1.5
@@ -874,17 +874,17 @@ BrightnessInteriorNight=1.0
 [RAINWETSURFACES]
 IgnoreWeatherSystem=true
 RainFadeTime=15.0
-ColorPowMultiplier=1.2
-FresnelMin=0.2
+ColorPowMultiplier=1.5
+FresnelMin=0.15
 FresnelCurve=4.0
-GlossinessDawn=1.0
-GlossinessSunrise=1.0
-GlossinessDay=1.0
-GlossinessSunset=1.0
-GlossinessDusk=1.0
-GlossinessNight=1.0
-GlossinessInteriorDay=1.0
-GlossinessInteriorNight=1.0
+GlossinessDawn=0.8
+GlossinessSunrise=0.8
+GlossinessDay=0.8
+GlossinessSunset=0.8
+GlossinessDusk=0.8
+GlossinessNight=0.8
+GlossinessInteriorDay=0.8
+GlossinessInteriorNight=0.8
 ReflectionAmountDawn=1.0
 ReflectionAmountSunrise=1.0
 ReflectionAmountDay=1.0
@@ -893,8 +893,8 @@ ReflectionAmountDusk=1.0
 ReflectionAmountNight=1.0
 ReflectionAmountInteriorDay=1.0
 ReflectionAmountInteriorNight=1.0
-BodyFresnelMin=0.05
-BodyFresnelCurve=4.0
+BodyFresnelMin=0.1
+BodyFresnelCurve=2.0
 BodyGlossinessDawn=1.0
 BodyGlossinessSunrise=1.0
 BodyGlossinessDay=1.0
@@ -903,22 +903,22 @@ BodyGlossinessDusk=1.0
 BodyGlossinessNight=1.0
 BodyGlossinessInteriorDay=1.0
 BodyGlossinessInteriorNight=1.0
-BodyReflectionAmountDawn=1.0
-BodyReflectionAmountSunrise=1.0
-BodyReflectionAmountDay=1.0
-BodyReflectionAmountSunset=1.0
-BodyReflectionAmountDusk=1.0
-BodyReflectionAmountNight=1.0
-BodyReflectionAmountInteriorDay=1.0
-BodyReflectionAmountInteriorNight=1.0
+BodyReflectionAmountDawn=1.5
+BodyReflectionAmountSunrise=1.5
+BodyReflectionAmountDay=1.5
+BodyReflectionAmountSunset=1.5
+BodyReflectionAmountDusk=1.5
+BodyReflectionAmountNight=1.5
+BodyReflectionAmountInteriorDay=1.5
+BodyReflectionAmountInteriorNight=1.5
 
 [WETSURFACES]
 IgnoreWeatherSystem=true
 EnableCubemap=true
 EnableGlossiness=true
 AntialiasingQuality=1
-FresnelMin=0.1
-FresnelCurve=2.0
+FresnelMin=0.05
+FresnelCurve=1.5
 GlossinessDawn=1.0
 GlossinessSunrise=1.0
 GlossinessDay=1.0
@@ -927,14 +927,14 @@ GlossinessDusk=1.0
 GlossinessNight=1.0
 GlossinessInteriorDay=1.0
 GlossinessInteriorNight=1.0
-ReflectionAmountDawn=0.0
-ReflectionAmountSunrise=0.0
-ReflectionAmountDay=0.0
-ReflectionAmountSunset=0.0
-ReflectionAmountDusk=0.0
-ReflectionAmountNight=0.0
-ReflectionAmountInteriorDay=0.0
-ReflectionAmountInteriorNight=0.0
+ReflectionAmountDawn=0.2
+ReflectionAmountSunrise=0.15
+ReflectionAmountDay=0.15
+ReflectionAmountSunset=0.15
+ReflectionAmountDusk=0.2
+ReflectionAmountNight=0.5
+ReflectionAmountInteriorDay=1.0
+ReflectionAmountInteriorNight=1.0
 BodyFresnelMin=0.05
 BodyFresnelCurve=2.0
 BodyGlossinessDawn=1.0
@@ -945,14 +945,14 @@ BodyGlossinessDusk=1.0
 BodyGlossinessNight=1.0
 BodyGlossinessInteriorDay=1.0
 BodyGlossinessInteriorNight=1.0
-BodyReflectionAmountDawn=0.0
-BodyReflectionAmountSunrise=0.0
-BodyReflectionAmountDay=0.0
-BodyReflectionAmountSunset=0.0
-BodyReflectionAmountDusk=0.0
-BodyReflectionAmountNight=0.0
-BodyReflectionAmountInteriorDay=0.0
-BodyReflectionAmountInteriorNight=0.0
+BodyReflectionAmountDawn=0.1
+BodyReflectionAmountSunrise=0.1
+BodyReflectionAmountDay=0.1
+BodyReflectionAmountSunset=0.1
+BodyReflectionAmountDusk=0.1
+BodyReflectionAmountNight=0.1
+BodyReflectionAmountInteriorDay=0.1
+BodyReflectionAmountInteriorNight=0.1
 
 [SUBSURFACESCATTERING]
 IgnoreWeatherSystem=true
@@ -1032,12 +1032,12 @@ TintAmount=4.0
 
 [GAMEVOLUMETRICRAYS]
 IgnoreWeatherSystem=true
-IntensityDawn=1.0
-IntensitySunrise=1.0
-IntensityDay=1.0
-IntensitySunset=1.0
-IntensityDusk=1.0
-IntensityNight=1.0
+IntensityDawn=0.5
+IntensitySunrise=0.5
+IntensityDay=0.5
+IntensitySunset=0.5
+IntensityDusk=0.5
+IntensityNight=0.5
 IntensityInteriorDay=1.0
 IntensityInteriorNight=1.0
 RangeFactorDawn=1.0
@@ -1113,7 +1113,7 @@ IntensityInteriorNight=0.5
 IgnoreWeatherSystem=true
 GlowIntensityDawn=0.33
 GlowIntensitySunrise=0.5
-GlowIntensityDay=0.75
+GlowIntensityDay=0.25
 GlowIntensitySunset=0.5
 GlowIntensityDusk=0.33
 GlowIntensityNight=0.0
